# Rbitnet

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  compatible-models-draft.yml  release.yml
crates/bitnet-core/: Cargo.toml
crates/bitnet-core/benches/: kernels.rs
crates/bitnet-core/examples/: inspect_gguf.rs
crates/bitnet-core/src/: error.rs  gguf.rs  inference.rs  kernels.rs  lib.rs
crates/bitnet-core/src/ggml/: dequant.rs  mod.rs  types.rs
crates/bitnet-core/src/gguf/: bitnet_meta.rs  mod.rs  parse.rs
crates/bitnet-core/src/llama/: config.rs  mod.rs  model.rs  runtime.rs
crates/bitnet-core/src/model/: mod.rs  toy.rs
crates/bitnet-core/tests/: golden_kernels.rs  optional_gguf_env.rs
crates/bitnet-server/: Cargo.toml
crates/bitnet-server/src/: config.rs  lib.rs  main.rs  metrics.rs  run.rs
crates/bitnet-server/tests/: openai_compat.rs
crates/rbitnet-cli/: Cargo.toml
crates/rbitnet-cli/src/: bitnet_install.rs  catalog.rs  download.rs  hf_search.rs  hub_http.rs  interactive_models.rs  main.rs
data/: compatible_models.json
docs/: BENCHMARKS.md  BITNET_SPEC.md  DEPLOYMENT.md  GOLDEN_TESTS.md  HF_BITNET_RBITNET_GAP.md  LIMITATIONS.md  MODEL_TESTING.md  PLAN_PRODUCTION.md  PROFILING.md  RELEASE.md  STATUS_AND_ROADMAP.md  TRAINING_AND_COMPATIBILITY.md  USAGE.md
scripts/: requirements-setup.txt  setup_env.py
