[workspace]
resolver = "2"
members = ["crates/bitnet-core", "crates/bitnet-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/loicpeaudecerf/Rbitnet"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3"
memmap2 = "0.9"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
half = "2.4"
tokenizers = "0.21"
rand = "0.8"
