[package]
name = "bitnet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure-Rust BitNet inference core (GGUF, ternary kernels, engine) — work in progress"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "kernels"
harness = false
