[package]
name = "bitnet-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenAI-compatible HTTP server for Rbitnet (Akasha BitNetProvider)"

[[bin]]
name = "rbitnet-server"
path = "src/main.rs"

[dependencies]
bitnet-core = { path = "../bitnet-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
