[package]
name = "bitnet-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenAI-compatible HTTP server for Rbitnet (Akasha BitNetProvider)"

[lib]
name = "bitnet_server"
path = "src/lib.rs"

[[bin]]
name = "rbitnet-server"
path = "src/main.rs"

[dependencies]
bitnet-core = { path = "../bitnet-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
tokio = { workspace = true }
