[package]
name = "rbitnet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Rbitnet: curated HF model list, search, download, optional serve"

[[bin]]
name = "rbitnet"
path = "src/main.rs"

[dependencies]
bitnet-server = { path = "../bitnet-server" }
clap = { version = "4", features = ["derive", "env"] }
hf-hub = "0.4"
ratatui = "0.29"
native-tls = "0.2"
once_cell = "1.20"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { version = "2", default-features = false, features = ["json", "gzip", "native-tls", "proxy-from-env"] }
urlencoding = "2"
